# rux

./: .gitignore  Cargo.toml  Makefile  x86_64-rux.json
.cargo/: config.toml
src/: init.rs  lib.rs
src/arch/x86_64/: boot.asm  boot64.asm  grub.cfg  linker.ld  multiboot_header.asm
src/gdt/: mod.rs  tss.rs
src/interrupts/: mod.rs
src/memory/: addr.rs  frame.rs  mod.rs  simple_allocator.rs
src/memory/paging/: entry.rs  mod.rs  table.rs
src/memory/phys/: mod.rs  simple_allocator.rs
src/output/: mod.rs  serial.rs  vga.rs
