[package]
name = "rux"
version = "0.1.0"
authors = ["mcb2003 <mikeybuchan@hotmail.co.uk>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.7.0"
