[package]
name = "rux"
version = "0.1.0"
authors = ["mcb2003 <mikeybuchan@hotmail.co.uk>"]
license = "gpl-3-or-later"
description = "A hobby OS project for x86_64, written in Rust"
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
multiboot2 = "0.10.1"
spin = "0.9.1"
x86_64 = "0.14.3"
