[package]
name = "rux"
version = "0.1.0"
authors = ["mcb2003 <mikeybuchan@hotmail.co.uk>"]
license = "gpl-3-or-later"
description = "A hobby OS project for x86_64, written in Rust"
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.release]
panic = "abort"
lto = "thin"

[profile.dev]
panic = "abort"

[features]
default = ["frame_alloc_simple"]
frame_alloc_simple = []

[dependencies]
multiboot2 = "0.10.1"
spin = "0.9.1"
uart_16550 = "0.2.15"
x86_64 = "0.14.3"
